# mips_circuit

./: Cargo.toml  README.md  prover.sh  setenv.bash  witness_generator.sh
contract/verifier/g16/: verifier.sol
contract/verifier/g16/verifier/: Verifier.abi
core/lib/basic_types/: Cargo.toml
core/lib/basic_types/src/: lib.rs
core/lib/circuit/: Cargo.toml  if_else_example.zok  main.zok  mips_keccak.zok  mips_nova.zok  mips_vm.zok  mips_vm_blake2s.zok  mips_vm_poseidon.zok  multi.zok
core/lib/circuit/hash_zok/: test_blake.zok  test_kecca.zok  test_pedersen.zok  test_poseidon.zok
core/lib/circuit/src/: lib.rs
core/lib/circuit/src/proof/: mod.rs  to_token.rs
core/lib/circuit/src/witness/: mod.rs
core/lib/config/: Cargo.toml
core/lib/config/src/: lib.rs
core/lib/config/src/configs/: api.rs  chain.rs  contracts.rs  eth_sender.rs  forced_exit_requests.rs  misc.rs  mod.rs  oracle_price.rs  ticker.rs  token_handler.rs  user_registration.rs  verifier.rs
core/lib/storage/: Cargo.toml
core/lib/storage/sql/: db.sql
core/lib/storage/src/: database_interface.rs  lib.rs
core/lib/storage/src/chain/: mod.rs
core/lib/storage/src/connection/: mod.rs
core/lib/storage/src/prover/: mod.rs  records.rs
core/lib/types/: Cargo.toml
core/lib/types/src/: lib.rs  tokens.rs
core/lib/utils/: Cargo.toml
core/lib/utils_macro_driver/: Cargo.toml
core/lib/utils_macro_driver/src/: lib.rs
core/lib/vlog/: Cargo.toml
examples/: proof.json  proving.key  verification.key  verifier.sol
zokrates_abi/src/: lib.rs
zokrates_cli/src/: bin.rs
