[package]
name = "basic_types"
version = "1.0.0"
edition = "2018"
authors = ["The ZKM Team"]
homepage = "https://zkm.io/"
repository = "https://github.com/zkMIPS/mips_circuit"
license = "Apache-2.0"
keywords = ["blockchain", "zkm"]
categories = ["cryptography"]

[dependencies]
web3 = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
