[package]
name = "circuit"
version = "1.0.0"
edition = "2018"
authors = ["The ZKM Team"]
homepage = "https://zkm.io/"
repository = "https://github.com/zkMIPS/mips_circuit"
license = "Apache-2.0"
keywords = ["blockchain", "zkm"]
categories = ["cryptography"]

[features]
default = ["bellman", "ark", "bellperson"]
bellman = ["zokrates_bellman", "zokrates_core/bellman", "zokrates_common/bellman"]
ark = ["zokrates_ark", "zokrates_core/ark", "zokrates_common/ark"]
bellperson = ["zokrates_bellperson", "zokrates_core/bellperson", "zokrates_common/bellperson"]

[dependencies]
zokrates_field = { version = "0.5", path = "../../../zokrates_field", features = ["multicore"] }
zokrates_abi = { version = "0.1", path = "../../../zokrates_abi" }
zokrates_core = { version = "0.7", path = "../../../zokrates_core", default-features = false }
zokrates_ast = { version = "0.1", path = "../../../zokrates_ast", default-features = false }
zokrates_profiler = { version = "0.1", path = "../../../zokrates_profiler", default-features = false }
zokrates_interpreter = { version = "0.1", path = "../../../zokrates_interpreter", default-features = false }
zokrates_circom = { version = "0.1", path = "../../../zokrates_circom", default-features = false }
zokrates_embed = { version = "0.1", path = "../../../zokrates_embed", features = ["multicore"] }
typed-arena = "1.4.1"
zokrates_fs_resolver = { version = "0.5", path = "../../../zokrates_fs_resolver"}
zokrates_common = { version = "0.1", path = "../../../zokrates_common", default-features = false }
serde_json = { version = "1.0", features = ["preserve_order"] }
types = { path = "../types", version = "1.0" }
vlog = { path = "../vlog", version = "1.0" }
rand_0_4 = { version = "0.4", package = "rand" }
rand_0_8 = { version = "0.8", package = "rand" }

# Backends
zokrates_proof_systems = { version = "0.1", path = "../../../zokrates_proof_systems", default-features = false }
zokrates_ark = { version = "0.1", path = "../../../zokrates_ark", features = ["multicore"], optional = true }
zokrates_bellman = { version = "0.1", path = "../../../zokrates_bellman", features = ["multicore"], optional = true }
zokrates_bellperson = { version = "0.1", path = "../../../zokrates_bellperson", default-features = false, optional = true }

[dev-dependencies]
glob = "0.2.11"
assert_cli = "0.5"
tempdir = "0.3"
ethabi = "17.0.0"
primitive-types = { version = "0.11", features = ["rlp"] }
fs_extra = "1.1.0"
pretty_assertions = "1.2.1"

[build-dependencies]
fs_extra = "1.1.0"

