[package]
name = "config"
version = "1.0.0"
edition = "2018"
authors = ["The ZKM Team"]
homepage = "https://zkm.io/"
repository = "https://github.com/zkMIPS/mips_circuit"
license = "Apache-2.0"
keywords = ["blockchain", "zkm"]
categories = ["cryptography"]

[dependencies]
types = { path = "../types", version = "1.0" }
utils = { path = "../utils", version = "1.0" }
num = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
envy = "0.4"
