[package]
name = "mips_storage"
version = "1.0.0"
edition = "2018"
authors = ["The ZKM Team"]
homepage = "https://zkm.io/"
repository = "https://github.com/zkMIPS/mips_circuit"
license = "Apache-2.0"
keywords = ["blockchain", "zkm"]
categories = ["cryptography"]

[features]
default = []
db_test = []

[dependencies]

utils = { path = "../utils", version = "1.0" }
types = { path = "../types", version = "1.0" }
utils_macro_driver = {path = "../utils_macro_driver", version= "0.1.0"}

serde = "1.0.130"
serde_json = "1.0.72"
num = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.4"
itertools = "0.9"
hex = "0.4"
metrics = "0.17"
parity-crypto = { version = "0.8", features = ["publickey"] }

vlog = { path = "../../lib/vlog", version = "1.0" }
log = "0.4"

async-trait = "0.1"
futures-util = "0.3"
deadpool = { version = "0.8", features = [
    "rt_tokio_1",
] }
sqlx = { version = "0.5", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "chrono",
    "json",
    "offline",
] }

tokio = { version = "1", features = ["full"] }