[package]
name = "types"
version = "1.0.0"
edition = "2018"
authors = ["The ZKM Team"]
homepage = "https://zkm.io/"
repository = "https://github.com/zkMIPS/mips_circuit"
license = "Apache-2.0"
keywords = ["blockchain", "zkm"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
utils = { path = "../utils", version = "1.0" }
basic_types = { path = "../basic_types", version = "1.0" }

sqlx = { version = "0.5", default-features = false, features = [
    "runtime-tokio-native-tls",
    "bigdecimal",
] }

num = { version = "0.3.1", features = ["serde"] }
bigdecimal = { version = "=0.2.0", features = ["serde"] }
hex = "0.4"
tiny-keccak = "1.4.2"
thiserror = "1.0"
vlog = { path = "../../lib/vlog", version = "1.0" }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
itertools = "0.9"
once_cell = "1.4"

anyhow = "1.0"

serde = "1.0.130"
serde_json = "1.0.72"
serde_with = "1.8.0"

# Crypto stuff
parity-crypto = { version = "0.8", features = ["publickey"] }
ethabi = "14.0.0"
rust-crypto = "0.2"

[dev-dependencies]
criterion = "0.3.0"
web3 = "0.16.0"
secp256k1 = { version = "0.20", features = ["std", "recovery"] }

[features]
default = []
run_benches = []
