[package]
name = "utils"
version = "1.0.0"
edition = "2018"
authors = ["The ZKM Team"]
homepage = "https://zkm.io/"
repository = "https://github.com/zkMIPS/mips_circuit"
license = "Apache-2.0"
keywords = ["blockchain", "zkm"]
categories = ["cryptography"]

[dependencies]
num = { version = "0.3.1", features = ["serde"] }
bigdecimal = { version = "=0.2.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
hex = "0.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.72"
