[package]
name = "vlog"
version = "1.0.0"
edition = "2018"
authors = ["The ZKM Team"]
homepage = "https://zkm.io/"
repository = "https://github.com/zkMIPS/mips_circuit"
license = "Apache-2.0"
keywords = ["blockchain", "zkm"]
categories = ["cryptography"]
publish = false # This is an utility crate, not to be used by libraries.


[dependencies]
tracing = { version = "0.1.22", features = ["log"] }
tracing-subscriber = { version = "0.2.15", features = ["fmt", "chrono"] }
tracing-appender = "0.1"
sentry = "0.23.0"

